--- a/app/views/lives/show.html.erb
+++ b/app/views/lives/show.html.erb
@@ -1,3 +1,4 @@
+<h1>Live</h1>
 <p>
   <strong>Title:</strong>
   <%= @live.title %>
@@ -35,3 +36,27 @@
 
 <%= link_to 'Edit', edit_life_path(@live) %> |
 <%= link_to 'Back', lives_path %>
+
+<h1>Reviews</h1>
+<table>
+
+  <thead>
+    <tr>
+      <th>nickname</th>
+      <th>rate</th>
+      <th>review</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @live.reviews.each do |review| %>
+      <tr>
+        <td><%= review.nickname %></td>
+        <td><%= review.rate %></td>
+        <td><%= review.review %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<br>
+
