ユーザー関係

--- a/app/views/lives/index.html.erb
+++ b/app/views/lives/index.html.erb
@@ -1,3 +1,13 @@
+<div>
+<%= link_to 'サインアウト', "/users/sign_out", method: :delete %>
+</div>
+<div>
+<a>投稿する</a>
+</div>
+
+
+
+
 <h1>Searching Lives</h1>
 <div>
   <%= form_tag('/lives/search', method: :get) do %>
