--- a/app/views/lives/search.html.erb
+++ b/app/views/lives/search.html.erb
@@ -3,7 +3,7 @@
   <%= form_tag('/lives/search', method: :get) do %>
     <input class="search__query" name="keyword" placeholder="タイトルで検索" type="text" value=""><button class="btn-search" title="検索" type="submit"><i class="icon-search"></i></button></input>
   <% end %>
-</div>>
+</div>
 
 <h1>Searching Lives Result</h1>
 <table>
