--- a/app/views/lives/show.html.erb
+++ b/app/views/lives/show.html.erb
@@ -1,62 +1,5 @@
-<h1>Live</h1>
-<p>
-  <strong>Title:</strong>
-  <%= @live.title %>
-</p>
-
-<p>
-  <strong>Day:</strong>
-  <%= @live.day %>
-</p>
-
-<p>
-  <strong>Starting time:</strong>
-  <%= @live.starting_time %>
-</p>
-
-<p>
-  <strong>Place:</strong>
-  <%= @live.place %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @live.price %>
-</p>
-
-<p>
-  <strong>Performer:</strong>
-  <%= @live.performer %>
-</p>
-
-<p>
-  <strong>Detail:</strong>
-  <%= @live.detail %>
-</p>
-
+<%= render :partial => "live", locals: { live: @live} %>
+<%= render :partial => "reviews/new", locals: { live: @live, review: @review} %>
+<%= render :partial => 'reviews/review', :collection => @reviews, locals: {review: @review} %>
 <%= link_to 'Edit', edit_life_path(@live) %> |
 <%= link_to 'Back', lives_path %>
-
-<h1>Reviews</h1>
-<table>
-
-  <thead>
-    <tr>
-      <th>nickname</th>
-      <th>rate</th>
-      <th>review</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @live.reviews.each do |review| %>
-      <tr>
-        <td><%= review.user.nickname %></td>
-        <td><%= review.rate %></td>
-        <td><%= review.review %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
-
