--- a/app/views/reviews/_new.html.erb
+++ b/app/views/reviews/_new.html.erb
@@ -1,25 +1,27 @@
-<fieldset>
-  <legend>Post Review</legend>
-  <div class="form-horizontal" role="form">
-    <%= form_for [live, review] do |f| %>
-      <div class="form-group">
-        <%= f.label :評価, style: { 'margin-right' => 8 } %>
-      </div>
-      <div class="form-group">
-        <%= f.number_field :rate, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } %>
-      </div>
-      <div class="form-group">
-        <%= f.text_area :review, placeholder: 'レビューを書いてね！', style: 'width: 100%;height: 300px;' %>
-      </div>
-      <div class="form-group">
-        <div class="row">
-          <div class="col10 push1">
-            <%= button_tag type: "submit", class: "btn btn--block" do %>
-          投稿する<i class="icon-arrow-right"></i>
-            <% end %>
+<div class="well bs-component">
+  <fieldset>
+    <legend>Post Review</legend>
+    <div class="form-horizontal" role="form">
+      <%= form_for [live, review] do |f| %>
+        <div class="form-group">
+          <%= f.label :評価, style: { 'margin-right' => 8 } %>
+        </div>
+        <div class="form-group">
+          <%= f.number_field :rate, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } %>
+        </div>
+        <div class="form-group">
+          <%= f.text_area :review, placeholder: 'レビューを書いてね！', style: 'width: 100%;height: 300px;' %>
+        </div>
+        <div class="form-group">
+          <div class="row">
+            <div class="col10 push1">
+              <%= button_tag type: "submit", class: "btn btn--block" do %>
+            投稿する<i class="icon-arrow-right"></i>
+              <% end %>
+            </div>
           </div>
         </div>
-      </div>
-    <% end %>
-  </div>
-</fieldset>
+      <% end %>
+    </div>
+  </fieldset>
+</div>
