--- a/app/views/lives/index.html.erb
+++ b/app/views/lives/index.html.erb
@@ -1,14 +1,28 @@
 <div class="contents">
   <div class="ranking">
     <h1>Ranking</h1>
+    <% @ranking.each.with_index(1) do |live, i| %>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <p><strong><%= i %>位 </strong><%= live.title %></p>
+          </h3>
+        </div>
+        <div class="panel-body">
+          <strong>Performer:</strong><%= live.performer %>
+        </div>
+      </div>
+    <% end %>
   </div>
   <div class="calender">
     <h1>Calender</h1>
   </div>
   <div class="searching">
     <h1>Searching Lives</h1>
-      <%= form_tag('/lives/search', method: :get) do %>
-        <input class="search__query" name="keyword" placeholder="タイトルで検索" type="text" value=""><button class="btn-search" title="検索" type="submit"><i class="icon-search"></i></button></input>
-      <% end %>
+    <%= form_tag('/lives/search', method: :get) do %>
+      <input class="search__query" name="keyword" placeholder="タイトルで検索" type="text" value="">
+      <button class="btn-search" title="検索" type="submit"><i class="icon-search">
+      </i></button></input>
+    <% end %>
   </div>
 </div>
