各live詳細ページへのリンク実装

--- a/app/views/lives/_live.html.erb
+++ b/app/views/lives/_live.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
   <div class="panel-heading">
-    <h3 class="panel-title"><%= live.title %></h3>
+    <h3 class="panel-title"><%= link_to live.title, life_path(live) %></h3>
   </div>
   <div class="panel-body">
     <div class="pull-left">
