検索機能にてransack適用

--- a/app/views/reviews/_new.html.erb
+++ b/app/views/reviews/_new.html.erb
@@ -15,8 +15,7 @@
         <div class="form-group">
           <div class="row">
             <div class="col10 push1">
-              <%= button_tag type: "submit", class: "btn btn--block" do %>
-            投稿する<i class="icon-arrow-right"></i>
+              <%= button_tag type: "submit", class: "btn btn--block" do %>投稿する
               <% end %>
             </div>
           </div>
