--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <p><%= review.user %>さんのレビュー</p>
+    <p><%= review.user.nickname %>さんのレビュー</p>
     <p>評価:<%= review.rate %></p>
   </div>
   <div class="panel-body">
