--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>Liveee</title>
-
-  <!-- <link rel="stylesheet" href="Liveee/app/assets/css/bootstrap.css"> -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+  <!--[if lt IE 9]>
+    <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
   <style type="text/css">
   body { padding-top: 80px; }
@@ -50,10 +53,6 @@
   }
   </style>
 
-  <!--[if lt IE 9]>
-    <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
 
 </head>
 
@@ -71,19 +70,11 @@
       <div class="navbar-collapse collapse" id="navbar-main">
         <div class="nav-left">
           <ul class="nav navbar-nav">
-
-<!--             <li><form class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-              </div>
-              <button type="submit" class="btn btn-default">Search</button>
-            </form></li>
- -->
             <li>
               <div class="navbar-form navbar-left" role="search">
                 <div class="input-group">
-                  <%= form_tag('/lives/search', method: :get) do %>
-                  <input class="form-control" name="keyword" placeholder="タイトルで検索" type="text" value=""><button class="form-control" title="Search" type="submit">Search</button></input>
+                  <%= search_form_for(Live.search, url: search_lives_path, html: { method: :get, class: 'form-inline', role: 'form' }) do |f| %>
+                    <%= render '/lives/search_form_nav', f: f %>
                   <% end %>
                 </div>
               </div>
@@ -91,15 +82,15 @@
           </ul>
         </div>
         <!-- <div class="pull-right"> -->
-          <ul class="nav navbar-nav">
-            <% if user_signed_in? %>
-              <li><%= link_to 'SignOut', "/users/sign_out", method: :delete %></li>
-              <li><a href="/users/<%= current_user.id %>">MyPage</a></li>
-            <% else %>
-              <li><%= link_to 'LogIn', "/users/sign_in", method: :post %></li>
-              <li><%= link_to 'SignUp', "/users/sign_up", method: :get %></li>
-            <% end %>
-          </ul>
+        <ul class="nav navbar-nav">
+          <% if user_signed_in? %>
+            <li><%= link_to 'SignOut', "/users/sign_out", method: :delete %></li>
+            <li><a href="/users/<%= current_user.id %>">MyPage</a></li>
+          <% else %>
+            <li><%= link_to 'LogIn', "/users/sign_in", method: :get %></li>
+            <li><%= link_to 'SignUp', "/users/sign_up", method: :get %></li>
+          <% end %>
+        </ul>
         <!-- </div> -->
       </div>
     </div>
@@ -117,13 +108,7 @@
 </footer>
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
 
-<script type="text/javascript">
-  $('.bs-component [data-toggle="popover"]').popover();
-  $('.bs-component [data-toggle="tooltip"]').tooltip();
-</script>
 
 </body>
 </html>
