--- a/app/views/lives/index.html.erb
+++ b/app/views/lives/index.html.erb
@@ -3,29 +3,28 @@
     <div class="col-xs-6">
       <div class="searching">
         <h1>Searching Lives</h1>
-        <%= form_tag('/lives/search', method: :get) do %>
-          <input class="search__query" name="keyword" placeholder="タイトルで検索" type="text" value="">
-          <button class="btn-search" title="検索" type="submit">Search</button></input>
+        <%= search_form_for(@q, url: search_lives_path, html: { method: :get, class: 'form-inline', role: 'form' }) do |f| %>
+          <%= render 'search_form', f: f %>
         <% end %>
       </div>
     </div>
-  <div class="col-xs-6">
-    <div class="ranking">
-      <h1>Ranking</h1>
-      <% @ranking.each.with_index(1) do |live, i| %>
-        <div class="panel panel-info">
-          <div class="panel-heading">
-            <h3 class="panel-title">
-              <p><strong><%= i %>位 </strong><%= link_to live.title, life_path(live) %></p>
-            </h3>
+    <div class="col-xs-6">
+      <div class="ranking">
+        <h1>Ranking</h1>
+        <% @ranking.each.with_index(1) do |live, i| %>
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">
+                <p><strong><%= i %>位 </strong><%= link_to live.title, life_path(live) %></p>
+              </h3>
+            </div>
+            <div class="panel-body">
+              <strong>Performer:</strong><%= live.performer %>
+            </div>
           </div>
-          <div class="panel-body">
-            <strong>Performer:</strong><%= live.performer %>
-          </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
-  </div>
   </div>
 </div>
 <!--   <div class="calender">
