--- a/app/views/lives/search.html.erb
+++ b/app/views/lives/search.html.erb
@@ -1,12 +1,14 @@
 <h1>Searching Lives</h1>
 <div>
-  <%= form_tag('/lives/search', method: :get) do %>
-    <input class="search__query" name="keyword" placeholder="タイトルで検索" type="text" value=""><button class="btn-search" title="検索" type="submit">Search</button></input>
+  <%= search_form_for @q do |f| %>
+    <%= f.label :title_cont %>
+    <%= f.text_field :title_cont %>
+    <%= f.submit %>
   <% end %>
 </div>
 
 <h1>Searching Lives Result</h1>
-  <%= paginate(@search_lives) %>
+
 <%= render :partial => "live", :collection => @search_lives, locals: { live: @search_live} %>
-  <%= paginate(@search_lives) %>
+
 <br>
