検索機能拡張前

--- a/app/views/lives/_search_form.html.erb
+++ b/app/views/lives/_search_form.html.erb
@@ -1,6 +1,6 @@
 <div>
   <%= search_form_for @q do |f| %>
-    <%= f.label :title_cont %>
+    <%= f.label :公演名から探す %>
     <%= f.text_field :title_cont %>
     <%= f.submit %>
   <% end %>
