--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require bootstrap
+ *= require fullcalendar
  *= require_tree .
  *= require_self
  *= require rails_bootstrap_forms
