--- a/app/views/lives/index.html.erb
+++ b/app/views/lives/index.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
   </div>
+  <div class="calender">
+    <div id="calendar"></div>
+  </div>
 </div>
-<!--   <div class="calender">
-    <h1>Calender</h1>
-  </div> -->
