--- a/app/views/lives/_search_form_nav.html.erb
+++ b/app/views/lives/_search_form_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <%= f.label :title_cont %>
-  <%= f.text_field :title_cont %>
+  <%= f.label :キーワードで探す %>
+  <%= f.text_field :title_or_performer_cont %>
   <%= f.submit %>
 </div>
