--- a/app/views/lives/index.html.erb
+++ b/app/views/lives/index.html.erb
@@ -3,9 +3,7 @@
     <div class="col-xs-6">
       <div class="searching">
         <h1>Searching Lives</h1>
-        <%= search_form_for(@q, url: search_lives_path, html: { method: :get, class: 'form-inline', role: 'form' }) do |f| %>
-          <%= render 'search_form', f: f %>
-        <% end %>
+        <%= render 'search_form'%>
       </div>
     </div>
     <div class="col-xs-6">
