--- a/app/views/lives/index.html.erb
+++ b/app/views/lives/index.html.erb
@@ -5,6 +5,10 @@
         <h1>Searching Lives</h1>
         <%= render 'search_form'%>
       </div>
+      <div class="calender">
+        <h1>Calender</h1>
+        <div id="calendar"></div>
+      </div>
     </div>
     <div class="col-xs-6">
       <div class="ranking">
@@ -25,6 +29,4 @@
     </div>
   </div>
 </div>
-<!--   <div class="calender">
-    <h1>Calender</h1>
-  </div> -->
+
