カレンダー表示

--- a/app/views/lives/index.html.erb
+++ b/app/views/lives/index.html.erb
@@ -7,6 +7,10 @@
           <%= render 'search_form', f: f %>
         <% end %>
       </div>
+      <div class="calender">
+        <h1>Calendar</h1>
+        <div id="calendar"></div>
+      </div>
     </div>
     <div class="col-xs-6">
       <div class="ranking">
@@ -25,8 +29,5 @@
         <% end %>
       </div>
     </div>
-  </div>
-  <div class="calender">
-    <div id="calendar"></div>
   </div>
 </div>
