calendar.jsを削除し、application.html.erbにてscriptタグ内に記入

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,8 +52,25 @@
     }
   }
   </style>
+  <link rel='stylesheet' href='fullcalendar/fullcalendar.css' />
+  <script src='lib/jquery.min.js'></script>
+  <script src='lib/moment.min.js'></script>
+  <script src='fullcalendar/fullcalendar.js'></script>
+  <script>
+  $(document).ready(function() {
 
+    // page is now ready, initialize the calendar...
 
+    $('#calendar').fullCalendar({
+      header: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'month,agendaWeek,agendaDay'
+      },
+      lang: "ja",
+    })
+  });
+  </script>
 </head>
 
 <body>
