--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,9 +95,25 @@
   </div>
 </header>
 
-<div class="container">
-  <%= yield %>
-</div>
+<body>
+  <div class="container">
+    <div class=flash>
+      <% if flash[:notice] %>
+        <div class="alert alert-dismissible alert-success">
+          <%= flash[:notice] %>
+        </div>
+      <% end %>
+      <% if flash[:alert] %>
+        <div class="alert alert-dismissible alert-danger">
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
+    </div>
+    <div class=contents>
+    <%= yield %>
+    </div>
+  </div>
+</body>
 
 <footer>
   <div class="container">
