--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,7 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <p><%= review.user.nickname %>さんのレビュー</p>
-    <p>評価:<%= review.rate %></p>
+    <p class="text-left"><%= review.user.nickname %>さんのレビュー</p><p class="text-right">評価:<%= review.rate %></p>
   </div>
   <div class="panel-body">
     <p>レビュー:<%= review.review %></p>
